--- a/curso-html-css.html
+++ b/curso-html-css.html
@@ -25,30 +25,32 @@
     </div>
     <div class="atalho">
         <div class="atl">
-            <div class="atl-dentro">
+            <a href="https://docs.google.com/" class="atl-dentro">
                 <div class="atl-img"></div>
-                <div class="atl-titulo">Docs1</div>
-            </div>
-            <div class="atl-dentro">
+                <div class="atl-titulo">Docs</div>
+            </a>
+            <a href="https://docs.google.com/" class="atl-dentro">
                 <div class="atl-img"></div>
-                <div class="atl-titulo">Docs2</div>
-            </div>
-            <div class="atl-dentro">
+                <div class="atl-titulo">Docs</div>
+            </a>
+            <a href="https://docs.google.com/" class="atl-dentro">
                 <div class="atl-img"></div>
-                <div class="atl-titulo">Docs3</div>
-            </div>
-            <div class="atl-dentro">
+                <div class="atl-titulo">Docs</div>
+            </a>
+        </div>
+        <div class="atl">
+            <a href="https://docs.google.com/" class="atl-dentro">
                 <div class="atl-img"></div>
-                <div class="atl-titulo">Docs4</div>
-            </div>
-            <div class="atl-dentro">
+                <div class="atl-titulo">Docs</div>
+            </a>
+            <a href="https://docs.google.com/" class="atl-dentro">
                 <div class="atl-img"></div>
-                <div class="atl-titulo">Docs5</div>
-            </div>
-            <div class="atl-dentro">
-                <div class="atl-img"></div>
-                <div class="atl-titulo">Docs6</div>
-            </div>
+                <div class="atl-titulo">Docs</div>
+            </a>
+            <a href="https://docs.google.com/" class="atl-dentro">
+                <div class="atl-plus">+</div>
+                <div class="atl-titulo">Docs</div>
+            </a>
         </div>
     </div>
 </body>
